Add Css and Js back + basic heading

--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" type="text/css" href="Style.css">
 <head>
     <title>Zoom Chat Group</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
-    <h1>Welcome to Zoom Chat Group!</h1>
+    <header>
+        <h1 id = "Title">Welcome to Zoom Chat Group!</h1>
+        <h3 class = 'Subtitle'>Zoom Chat Group is a form of communication for GHS G5 in these times</h3>
+    </header>
+    <button><a href = 'https://zoom.us/' target = "_blank">Go to Zoom</a></button>
+    <nav>
+        <ul>
+            <li><a>Coming Soon!</a></li>
+        </ul>
+    </nav>
 </body>
+<script src = "Main.js"></script>
 </html>
