--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             <br>
             <li><h3 class = 'Subtitle'>No talking during class unless somebody can't get in to class or there is a emergency</h3></li>
             <br>
-            <li><h3 class = 'Subtitle'>Ask Jacob or Sama if you have any questions</h3></li>
+            <li><h3 class = 'Subtitle'>Ask an admin if you have any questions</h3></li>
         </ol>
         <br>
         <br>
-        <h3>More will be added soon!</h3>
+        <h3>More will be added soon. Tell a admin if you have any suggestions!</h3>
     </article>
 </body>
 <script src = "Main.js"></script>
