--- a/index.html
+++ b/index.html
@@ -2,48 +2,49 @@
 <html lang = "en">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="Style.css">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Zoom Chat Group</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-</head>
-<body>
-    <header>
-        <div id = "titleContainer">
-            <h1 class = "Title">Welcome to Zoom Chat Group!</h1>
-            <h3 class = 'Subtitle'>Zoom Chat Group is a form of communication for GHS G5 in these times</h3>
-        </div>
-    </header>
-    <button><a href = 'https://zoom.us/' target = "_blank"><br>Go to Zoom</a></button>
-    <nav>
-        <ul>
-            <li><a>Zoom Chat Group Nav Bar (coming soon!)</a></li>
-        </ul>
-    </nav>
-    <article>
-        <h2 class = 'Title'>The Code Of Conduct</h2>
-        <ol>
-            <li><h3 class = 'Subtitle'>Be Nice</h3></li>
-            <br>
-            <li><h3 class = 'Subtitle'>No spamming</h3></li>
-            <br>
-            <li><h3 class = 'Subtitle'>Do not post large amounts of pictures or GIFs (more than 5 a day) and make sure that their purpose is cohesive and they aren't random</h3></li>
-            <br>
-            <li><h3 class = 'Subtitle'>Be constructive</h3></li>
-            <br>
-            <li><h3 class = 'Subtitle'>No talking after 8:00 PM or before 7:00 AM</h3></li>
-            <br>
-            <li><h3 class = 'Subtitle'>Respect your peers and don't tease, bully, or use derogatory terms</h3></li>
-            <br>
-            <li><h3 class = 'Subtitle'>No talking during class unless somebody can't get in to class or there is a emergency</h3></li>
-            <br>
-            <li><h3 class = 'Subtitle'>Ask an admin if you have any questions</h3></li>
-        </ol>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>Zoom Chat Group</title>
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    </head>
+    <body>
+        <header title = "Heading with background image of GHS">
+            <div id = "titleContainer">
+                <h1 class = "Title">Communication During Covid</h1>
+                <h3 class = 'Subtitle'>Zoom Chat Group is helping GHS grade 5 stay together during these times</h3>
+            </div>
+        </header>
+        <button><a href = 'https://zoom.us/' target = "_blank" style = "bottom: 2.5%;"><br>Go to Zoom</a></button>
         <br>
-        <br>
-        <h3>More will be added soon. Tell a admin if you have any suggestions!</h3>
-    </article>
-</body>
-<script src = "Main.js"></script>
-
+        <nav>
+            <ul>
+                <li><a>Zoom Chat Group Nav Bar (coming soon!)</a></li>
+            </ul>
+        </nav>
+        <article>
+            <h2 class = 'Title'>The Code Of Conduct</h2>
+            <ol>
+                <li><h3 class = 'Subtitle'>Be Nice</h3></li>
+                <br>
+                <li><h3 class = 'Subtitle'>No spamming</h3></li>
+                <br>
+                <li><h3 class = 'Subtitle'>Do not post large amounts of pictures or GIFs (more than 5 a day) and make sure that their purpose is cohesive and they aren't random</h3></li>
+                <br>
+                <li><h3 class = 'Subtitle'>Be constructive</h3></li>
+                <br>
+                <li><h3 class = 'Subtitle'>No talking after 8:00 PM or before 7:00 AM</h3></li>
+                <br>
+                <li><h3 class = 'Subtitle'>Respect your peers and don't tease, bully, or use derogatory terms</h3></li>
+                <br>
+                <li><h3 class = 'Subtitle'>No talking during class unless somebody can't get in to class or there is a emergency</h3></li>
+                <br>
+                <li><h3 class = 'Subtitle'>Ask an admin if you have any questions</h3></li>
+            </ol>
+            <br>
+            <br>
+            <h3>More will be added soon. Tell a admin if you have any suggestions!</h3>
+        </article>
+    </body>
+    <script src = "Main.js"></script>
+    <noscript>Save yourself from the dark side and enable Javascript to improve your experience!</noscript>
 </html>
