--- a/index.html
+++ b/index.html
@@ -1,50 +1,1 @@
-<!DOCTYPE html>
-<html lang = "en">
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="Style.css">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Zoom Chat Group</title>
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    </head>
-    <body>
-        <header title = "Heading with background image of GHS">
-            <div id = "titleContainer">
-                <h1 class = "Title">Communication During Covid</h1>
-                <h3 class = 'Subtitle'>Zoom Chat Group is helping GHS grade 5 stay together during these times</h3>
-            </div>
-        </header>
-        <button><a href = 'https://zoom.us/' target = "_blank" style = "bottom: 2.5%;"><br>Go to Zoom</a></button>
-        <br>
-        <nav>
-            <ul>
-                <li><a>Zoom Chat Group Nav Bar (coming soon!)</a></li>
-            </ul>
-        </nav>
-        <article>
-            <h2 class = 'Title'>The Code Of Conduct</h2>
-            <ol>
-                <li><h3 class = 'Subtitle'>Be Nice</h3></li>
-                <br>
-                <li><h3 class = 'Subtitle'>No spamming</h3></li>
-                <br>
-                <li><h3 class = 'Subtitle'>Do not post large amounts of pictures or GIFs (more than 5 a day) and make sure that their purpose is cohesive and they aren't random</h3></li>
-                <br>
-                <li><h3 class = 'Subtitle'>Be constructive</h3></li>
-                <br>
-                <li><h3 class = 'Subtitle'>No talking after 8:00 PM or before 7:00 AM</h3></li>
-                <br>
-                <li><h3 class = 'Subtitle'>Respect your peers and don't tease, bully, or use derogatory terms</h3></li>
-                <br>
-                <li><h3 class = 'Subtitle'>No talking during class unless somebody can't get in to class or there is a emergency</h3></li>
-                <br>
-                <li><h3 class = 'Subtitle'>Ask an admin if you have any questions</h3></li>
-            </ol>
-            <br>
-            <br>
-            <h3>More will be added soon. Tell a admin if you have any suggestions!</h3>
-        </article>
-    </body>
-    <script src = "Main.js"></script>
-    <noscript>Save yourself from the dark side and enable Javascript to improve your experience!</noscript>
-</html>
+<!doctype html><html><head><link rel="stylesheet" href="bundle.css"><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet"><title>awesomebanana2018</title></head><body><aside class="mdc-drawer mdc-drawer--modal" data-mdc-auto-init="Drawer"><div class="mdc-drawer__content"><nav class="mdc-list"><a class="mdc-list-item mdc-list-item--activated" href="https://github.com/awesomebanana2018" aria-current="page" target="_blank"><i class="material-icons mdc-list-item__graphic" aria-hidden="true">inbox</i> <span class="mdc-list-item__text">Github</span> </a><a class="mdc-list-item" href="https://web.roblox.com/users/582243887/profile" target="_blank"><i class="material-icons mdc-list-item__graphic" aria-hidden="true">send</i> <span class="mdc-list-item__text">Roblox</span> </a><a class="mdc-list-item" href="#"><i class="material-icons mdc-list-item__graphic" aria-hidden="true">drafts</i> <span class="mdc-list-item__text">Coming Soon!</span> </a><button class="mdc-button"><div class="mdc-button__ripple" data-mdc-auto-init="Ripple"></div>EXIT</button></nav></div></aside><div class="mdc-drawer-scrim"></div><header class="mdc-top-app-bar" data-mdc-auto-init="TopBar" id="app-bar"><div class="mdc-top-app-bar__row"><section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start"><button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button" id="nav">menu</button> <span class="mdc-top-app-bar__title">awesomebanana2018</span></section></div></header><main id="main-content" class="mdc-typography"><div id="top"><br><br><h1 class="mdc-typography--headline2 headline">awesomebanana2018</h1><h3 class="mdc-typography--headline4 headline">The universe is only as big as you make it</h3><a class="mdc-button mdc-button--raised center" data-mdc-auto-init="Ripple" href="https://github.com/awesomebanana2018" target="_blank"><div class="mdc-button__ripple"></div><h3 class="mdc-button__label">View on Github</h3><br></a></div><script src="bundle.js" async></script></main><script src="bundle.js"></script></body></html>
