--- a/404.html
+++ b/404.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html lang = "en">
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="Style.css">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Zoom Chat Group</title>
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    </head>
-    <body>
-        <h1 class = "Title">Looks like you've got lost in the wild of Zoom Chat Group</h1>
-        <button><a href = "index.html">Return Home</a></button>
-    </body>
-</html>
+<!doctype html><html><head><link rel="stylesheet" href="bundle.css"><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet"><script src="404.js" async></script><title>404</title></head><body class="mdc-typography"><div class="mdc-dialog" data-mdc-auto-init="Dialog"><div class="mdc-dialog__container"><div class="mdc-dialog__surface" role="alertdialog" aria-modal="true" aria-labelledby="my-dialog-title" aria-describedby="my-dialog-content"><h2 class="mdc-dialog__title" id="my-dialog-title">Welcome to adventure!</h2><div class="mdc-dialog__content" id="my-dialog-content"><ul class="mdc-list"><li class="mdc-list-item" tabindex="0"><span class="mdc-list-item__graphic"><div class="mdc-radio"><input class="mdc-radio__native-control" type="radio" id="test-dialog-baseline-confirmation-radio-1" name="test-dialog-baseline-confirmation-radio-group" checked="checked"><div class="mdc-radio__background"><div class="mdc-radio__outer-circle"></div><div class="mdc-radio__inner-circle"></div></div></div></span><label id="test-dialog-baseline-confirmation-radio-1-label" for="test-dialog-baseline-confirmation-radio-1" class="mdc-list-item__text">None</label></li></ul></div><footer class="mdc-dialog__actions"><button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="close"><div class="mdc-button__ripple"></div><span class="mdc-button__label">Stuff</span></button> <button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="accept"><div class="mdc-button__ripple"></div><span class="mdc-button__label">More</span></button></footer></div></div><div class="mdc-dialog__scrim"></div></div><h1 class="mdc-typography--headline2 headline">Oops! Looks like you got lost</h1><a class="mdc-button center" data-mdc-auto-init="Ripple" href="https://awesomebanana2018.github.io"><div class="mdc-button__ripple"></div><h3 class="mdc-button__label">Return Home</h3><br></a><button class="mdc-button center" data-mdc-auto-init="Ripple"><div class="mdc-button__ripple"></div><h3 class="mdc-button__label">Play a game</h3></button></body></html>
